--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Webchat/ Direct Messenger Application",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack serve --open --mode development",
     "test": "test"
   },
   "repository": {
